# prometheus-vla

./: .gitignore  .gitmodules  README.md  convert_depth.py  inspect_parquet.py  install.sh  pyproject.toml  requirements.txt  test_hand_read.py  test_sdk.py
docs/: unitree_g1_async_inference.md
tests/: test_convert_depth.py
train/: run_train.py
train/config/: act.yaml  smolvla.yaml
tutorial/: Erro_DataSets.md  Teleoperacao_JoystickG1Arms.md
visualization/: README.md  visualize_g1_3d.py
