[project]
name = "prometheus-vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lerobot",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
lerobot = { path = "lerobot", editable = true }
